# Persistence

./: .gitignore  Calculator.fs  Chain.fs  Chain.hs  ChangeLog.md  Filtration.hs  HasseDiagram.hs  HasseNode.fs  HomCalc.hs  Homology.fs  LICENSE  Main.fs  Main.hs  Matrix.fs  Matrix.hi  Matrix.hs  MaximalCliques.hs  Parser.fs  Persistence-dev.cabal  Persistence.cabal  Persistence.hs  README.md  SimplicialComplex.fs  SimplicialComplex.hs  SmithReduction.hs  Testing.hs  Util.fs  Util.hi  Util.hs  changelog.md  homology-calculator.fs  package.yaml  parser.fs  stack.yaml  util.fs
dist-newstyle/cache/: compiler  config
src/: HasseDiagram.hs  Matrix.hs  SimplicialComplex.hs
src/Persistence/: Filtration.hs  Graph.hs  HasseDiagram.hs  Matrix.hs  SimplicialComplex.hs  Util.hs
testing/: Testing.hs
