name:                Persistence-dev

version:             1.1.2

synopsis:            Deduce topological features of metric spaces, graphs, or any data with a binary function into an ordered set.

description:         Persistence is a topological data analysis library motivated by flexibility when it comes to the type of data being analyzed. If you have data that comes with a meaningful function into something of the Ord typeclass, you can use Persistence to detect clusters and holes in the data. You can also use the library to analyze the topology of directed\/undirected weighted\/unweighted graphs, and compare topologies of different data sets.

license:             BSD3

license-file:        LICENSE

author:              Eben Kadile

maintainer:          eben.cowley42@gmail.com

-- copyright:

category:            Data

build-type:          Simple

-- Extra files to be distributed with the package, such as examples or a
-- README.
extra-source-files:  ChangeLog.md

cabal-version:       >=1.10


library
  -- Modules exported by the library.
  exposed-modules:     SimplicialComplex, Persistence, Testing, Util, HasseDiagram, Matrix

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:

  -- Other library packages from which modules are imported.
  build-depends:       base >=4.10 && <4.11.2, containers >=0.5 && <0.6, vector >=0.12 && <0.13, parallel >=3.2 && <3.3, maximal-cliques >=0.1

  -- Directories containing source files.
  -- hs-source-dirs:

  default-language:    Haskell2010
